# heart-disease-project

./: .gitignore  README.md  pyproject.toml
notebooks/: eda_notebook.ipynb
src/: make_dataset.py
src/heart_ml/: make_dataset.py  train.py
