[tool.poetry]
name = "heart_ml"
version = "0.1.0"
description = "This project aims to build and evaluate machine learning models to accurately classify the presence of heart disease based on the provided attributes."
authors = ["Mikhail Lukashevich <mikhail.n.lukashevich@gmail.com>"]

[tool.poetry.scripts]
train = "heart_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
xgboost = "^2.1.0"
joblib = "^1.4.2"
mlflow = "^2.14.1"
click = "^8.1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
